--- a/style.css
+++ b/style.css
@@ -8,27 +8,23 @@ h1 {
 
 body {
     height: 100vh;
-    display: flex;
     background: #f7de6e;
-    padding: 0px;
-    margin: 0px;
+    display: grid;
 }
 
 #text_1 {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-size: 50px;
-    /* padding: auto; */
 }
 
 .container {
-    width: fit-content;
     margin: 0px;
+    width: fit-content;
 }
 
-.banner {
-    width: auto;
-    height: 200px;
-    padding: 0px;
+.header {
+    height: 150px;
+    width: 100vw;
     margin: 0px;
     background-color: #f8f7a1;
     border: 2px;
@@ -36,3 +32,18 @@ body {
     align-items: center;
     justify-content: space-evenly;
 }
+
+.qblock {
+    background-color: #f8f7a1;
+    height: 400px;
+    width: 700px;
+    border: 10px;
+    border-color: rgb(241, 170, 63);
+    border: solid;
+    float: left;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.question {}
