--- a/css/components/about.css
+++ b/css/components/about.css
@@ -2,3 +2,9 @@
   font-family: Raleway, Helvetica, sans-serif;
   text-align: center;
 }
+
+.subheading {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-shadow: 10px 10px 4px rgba(206, 89, 55, 0.75);
+}
