centered all text

--- a/css/components/about.css
+++ b/css/components/about.css
@@ -1,6 +1,9 @@
+.about {
+  text-align: center;
+}
+
 .about-title {
   font-family: Raleway, Helvetica, sans-serif;
-  text-align: center;
 }
 
 .subheading {
