--- a/css/components/about.css
+++ b/css/components/about.css
@@ -4,10 +4,10 @@
 
 .about-title {
   font-family: Raleway, Helvetica, sans-serif;
+  margin: 10%;
 }
 
 .subheading {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-shadow: 10px 10px 4px rgba(206, 89, 55, 0.75);
 }
