--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
 @import 'components/navbar.css';
 @import 'components/cards.css';
 @import 'components/about.css';
+@import 'components/projects.css';
