--- a/css/components/projects.css
+++ b/css/components/projects.css
@@ -3,6 +3,10 @@
   text-align: center;
 }
 
+.projects__text {
+  opacity: 0;
+}
+
 .hidden {
   opacity: 0;
   transition: 0.3s ease-in;
@@ -11,4 +15,11 @@
 .unhide {
   opacity: 1;
   transition: 0.3s ease-in;
+}
+
+.projects--grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
+  place-items: center;
 }
