--- a/css/components/projects.css
+++ b/css/components/projects.css
@@ -5,6 +5,13 @@
 
 .projects__text {
   opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.projects__image {
+  position: relative;
 }
 
 .hidden {
