--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,16 @@
 .about {
-  text-align: center; }
+  text-align: center;
+}
 
 .about-title {
   font-family: Raleway, Helvetica, sans-serif;
-  margin: 10%; }
+  margin: 10%;
+}
 
 .subheading {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 .projects-card {
   width: 25rem;
@@ -17,53 +21,66 @@
   border-radius: 10px;
   border: solid 2px #9b72aa;
   position: relative;
-  text-align: center; }
+  text-align: center;
+}
 
 .projects-card > * {
   width: 100%;
-  object-fit: cover; }
+  object-fit: cover;
+}
 
 .projects-card h2 {
   font-size: 1.6rem;
   font-weight: bold;
-  margin: 0; }
+  margin: 0;
+}
 
 .navbar {
   display: flex;
   justify-content: space-evenly;
-  margin: 1.5rem auto; }
+  margin: 1.5rem auto;
+}
 
 .nav-text {
   color: #380b67;
-  font-family: raleway, sans-serif; }
+  font-family: raleway, sans-serif;
+}
 
 @media screen and (min-width: 480px) {
   .navbar {
-    max-width: 50%; } }
+    max-width: 50%;
+  }
+}
 
 .projects-title {
   margin: 10%;
-  text-align: center; }
+  text-align: center;
+}
 
 .projects__text {
   opacity: 0;
   position: absolute;
   top: 0;
-  left: 0; }
+  left: 0;
+}
 
 .projects__image {
-  position: relative; }
+  position: relative;
+}
 
 .hidden {
   opacity: 0;
-  transition: 0.3s ease-in; }
+  transition: 0.3s ease-in;
+}
 
 .unhide {
   opacity: 1;
-  transition: 0.3s ease-in; }
+  transition: 0.3s ease-in;
+}
 
 .projects--grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 20px;
-  place-items: center; }
+  place-items: center;
+}
