--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -20,3 +20,22 @@
   font-weight: bold;
   margin: 0;
 }
+
+.projects__text {
+  opacity: 0;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+  width: 25rem;
+  object-fit: cover;
+  overflow: hidden;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  border: solid 2px #9b72aa;
+  text-align: center;
+}
+
+.projects__image {
+  position: relative;
+}
