--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,3 @@
-.navbar {
-  display: flex;
-  justify-content: space-evenly;
-  margin: 1.5rem auto; }
-
-.nav-text {
-  color: #380b67;
-  font-family: raleway, sans-serif; }
-
-@media screen and (min-width: 480px) {
-  .navbar {
-    max-width: 50%; } }
-
-.projects-title {
-  margin: 10%;
-  text-align: center; }
-
-.projects__image {
-  position: relative; }
-
-.projects--grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 20px;
-  place-items: center; }
-
 .about-title {
   font-family: Raleway, Helvetica, sans-serif;
   margin: 10%; }
@@ -33,6 +7,9 @@
 
 .u-center-text {
   text-align: center; }
+
+.u-title-margin {
+  margin: 10%; }
 
 .hidden {
   opacity: 0;
@@ -78,3 +55,16 @@
 
 .projects__image {
   position: relative; }
+
+.navbar {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 1.5rem auto; }
+
+.nav-text {
+  color: #380b67;
+  font-family: raleway, sans-serif; }
+
+@media screen and (min-width: 480px) {
+  .navbar {
+    max-width: 50%; } }
