--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
   opacity: 1;
   transition: 0.3s ease-in; }
 
-.projects-card {
+.projects__card {
   width: 25rem;
   object-fit: cover;
   overflow: hidden;
@@ -29,29 +29,18 @@
   border: solid 2px #9b72aa;
   position: relative;
   text-align: center; }
+  .projects__card--text {
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .projects__card h2 {
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin: 1rem; }
 
-.projects-card > * {
+.projects__card > * {
   width: 100%;
   object-fit: cover; }
-
-.projects-card h2 {
-  font-size: 1.6rem;
-  font-weight: bold;
-  margin: 0; }
-
-.projects__text {
-  opacity: 0;
-  position: absolute;
-  top: 100px;
-  left: 0;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-  width: 25rem;
-  object-fit: cover;
-  overflow: hidden;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  border: solid 2px #9b72aa;
-  text-align: center; }
 
 .projects__image {
   position: relative; }
