--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+.hidden {
+  opacity: 0;
+  transition: 0.3s ease-in; }
+
+.unhide {
+  opacity: 1;
+  transition: 0.3s ease-in; }
+
 .about-title {
   font-family: Raleway, Helvetica, sans-serif;
   margin: 10%; }
@@ -11,13 +19,29 @@
 .u-title-margin {
   margin: 10%; }
 
-.hidden {
-  opacity: 0;
-  transition: 0.3s ease-in; }
-
-.unhide {
-  opacity: 1;
-  transition: 0.3s ease-in; }
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    position: absolute;
+    z-index: 10;
+    transition: all 0.2s; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo--p3 {
+      left: 20%;
+      top: 10rem; }
+    .composition__photo:hover {
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
 
 .projects__card {
   width: 25rem;
