hover blur effect

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'components/buttons';
 @import 'components/compositions';
 @import 'components/cards';
+@import 'components/image-hover';
 
 @import 'layout/header';
 
