--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,34 @@
 .projects__image {
   position: relative; }
 
+.story {
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 3px;
+  font-size: 1.6rem; }
+  .story__img {
+    backface-visibility: hidden;
+    transition: all 0.5s; }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: scale(0.9);
+    filter: blur(3px) brightness(80%); }
+
 .navbar {
   display: flex;
   justify-content: space-evenly;
