--- a/sass/components/_image-hover.scss
+++ b/sass/components/_image-hover.scss
@@ -1,36 +1,14 @@
 .story {
-  width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
-  background-color: rgba($color-white, 0.6);
+  background-color: rgba($color-black, 0.8);
   border-radius: 3px;
-  padding: 6rem;
-  padding-left: 9rem;
   font-size: $default-font-size;
-  transform: skewX(-12deg);
-
-  &__shape {
-    width: 15rem;
-    height: 15rem;
-    float: left;
-    -webkit-shape-outside: circle(50% at 50% 50%);
-    shape-outside: circle(50% at 50% 50%);
-
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12deg);
-    position: relative;
-  }
 
   &__img {
-    height: 100%;
-    transform: translateX(-4rem) scale(1.4);
+    // transform: translateX(-4rem) scale(1);
     backface-visibility: hidden;
     transition: all 0.5s;
-  }
-
-  &__text {
-    transform: skewX(12deg);
   }
 
   &__caption {
@@ -53,7 +31,7 @@
   }
 
   &:hover &__img {
-    transform: translateX(-4rem) scale(1);
+    transform: scale(0.9);
     filter: blur(3px) brightness(80%);
   }
 }
