--- a/sass/components/_image-hover.scss
+++ b/sass/components/_image-hover.scss
@@ -4,6 +4,7 @@
   background-color: rgba($color-black, 0.8);
   border-radius: 3px;
   font-size: $default-font-size;
+  position: relative;
 
   &__img {
     // transform: translateX(-4rem) scale(1);
@@ -15,7 +16,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 20%);
+    transform: translate(-50%, -500%);
     color: $color-white;
     text-transform: uppercase;
     font-size: 1.7rem;
@@ -27,7 +28,7 @@
 
   &:hover &__caption {
     opacity: 1;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -250%);
   }
 
   &:hover &__img {
