--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@
 .u-center-text {
   text-align: center; }
 
-.u-title-margin {
-  margin: 10%; }
+.u-margin-top-bottom {
+  margin: 10% 0; }
 
 .composition {
   position: relative; }
@@ -69,49 +69,48 @@
 .projects__image {
   position: relative; }
 
-.story {
+.projects {
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
   background-color: rgba(0, 0, 0, 0.8);
   border-radius: 3px;
   font-size: 1.6rem;
   position: relative; }
-  .story__img {
+  .projects__img {
     backface-visibility: hidden;
     transition: all 0.5s; }
-  .story__text {
+  .projects__text {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 200%);
     color: #fff;
     opacity: 0;
-    font-size: 1rem;
     transition: all 0.5s;
     backface-visibility: hidden;
-    padding: 1rem; }
-  .story__caption {
+    font-size: 1rem;
+    padding: 1rem;
+    transform: translate(-50%, 200%); }
+  .projects__caption {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -500%);
     color: #fff;
-    text-transform: uppercase;
-    font-size: 1.7rem;
-    text-align: center;
     opacity: 0;
     transition: all 0.5s;
-    backface-visibility: hidden; }
-  .story h4 {
+    backface-visibility: hidden;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    transform: translate(-50%, -500%); }
+  .projects h4 {
     font-size: 1.2rem;
     color: #7ed56f; }
-  .story:hover .story__caption {
+  .projects:hover .projects__caption {
     opacity: 1;
     transform: translate(-50%, -250%); }
-  .story:hover .story__text {
+  .projects:hover .projects__text {
     opacity: 1;
     transform: translate(-50%, -20%); }
-  .story:hover .story__img {
+  .projects:hover .projects__img {
     transform: scale(0.9);
     filter: blur(3px) brightness(60%); }
 
