--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'components/compositions';
 @import 'components/cards';
 @import 'components/image-hover';
+@import 'components/slider';
 
 @import 'layout/header';
 
