--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@
 .u-margin-top-bottom {
   margin: 10% 0; }
 
+button:focus {
+  outline: none !important; }
+
 .composition {
   position: relative; }
   .composition__photo {
@@ -149,9 +152,9 @@
   font-family: inherit;
   color: #333;
   border-radius: 50%;
-  height: 3.5rem;
-  width: 3.5rem;
-  font-size: 2.25rem;
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 1.5rem;
   cursor: pointer; }
 
 .slider__btn--left {
@@ -164,7 +167,7 @@
 
 .dots {
   position: absolute;
-  bottom: 5%;
+  bottom: 20%;
   left: 50%;
   transform: translateX(-50%);
   display: flex; }
