--- a/css/style.css
+++ b/css/style.css
@@ -197,10 +197,11 @@ button:focus {
   display: flex;
   justify-content: space-evenly;
   margin: 1.5rem auto; }
-
-.nav-text {
-  color: #380b67;
-  font-family: raleway, sans-serif; }
+  .navbar__text {
+    color: #380b67;
+    font-family: raleway, sans-serif;
+    text-decoration: none !important;
+    font-size: 1.5rem; }
 
 @media screen and (min-width: 480px) {
   .navbar {
