--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ button:focus {
   .projects__card h2 {
     font-size: 1.6rem;
     font-weight: bold;
-    margin: 1rem; }
+    padding: 1rem; }
 
 .projects__card > * {
   width: 100%;
