--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
   opacity: 1;
   transition: 0.3s ease-in; }
 
+.row {
+  margin: 0.5rem 0rem; }
+
 .about-title {
   font-family: Raleway, Helvetica, sans-serif;
   margin: 10%; }
@@ -18,6 +21,10 @@
 
 .u-margin-top-bottom {
   margin: 10% 0; }
+
+.divider {
+  margin: 3rem 0;
+  border-bottom: 1px solid #777; }
 
 button:focus {
   outline: none !important; }
@@ -217,4 +224,5 @@ button:focus {
   .grid__item {
     font-size: 1rem; }
   .grid img {
-    width: 2rem; }
+    width: 2rem;
+    margin-right: 0.5rem; }
