--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -7,3 +7,8 @@
   transition: all 0.5s;
   backface-visibility: hidden;
 }
+
+@mixin divider {
+  margin: 3rem 0;
+  border-bottom: 1px solid $color-grey-dark;
+}
