--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -2,17 +2,23 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(5);
-  grid-gap: 0.5rem;
-  place-items: center;
+  // grid-gap: 0.5rem;
   margin: auto;
 
   &__title {
     font-size: 1.5rem;
-    // grid-column: span 2;
+    text-align: left;
+    border-bottom: 1px solid $color-grey-dark;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
   }
 
   &__item {
     font-size: 1rem;
+    width: 14rem;
+    display: flex;
+    flex-direction: row;
+    margin: 1rem 0.5rem 0 0.5rem;
   }
 
   img {
