--- a/css/style.css
+++ b/css/style.css
@@ -218,16 +218,15 @@ button:focus {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(5);
-  margin: auto; }
+  margin-left: 5rem; }
   .grid__title {
     font-size: 1.5rem;
     text-align: left;
-    border-bottom: 1px solid #777;
     padding: 0.5rem;
     margin-bottom: 1rem; }
   .grid__item {
     font-size: 1rem;
-    width: 14rem;
+    width: 12rem;
     display: flex;
     flex-direction: row;
     margin: 1rem 0.5rem 0 0.5rem; }
