--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -2,20 +2,19 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(5);
-  // grid-gap: 0.5rem;
-  margin: auto;
+  margin-left: 5rem;
 
   &__title {
     font-size: 1.5rem;
     text-align: left;
-    border-bottom: 1px solid $color-grey-dark;
+    // border-bottom: 1px solid $color-grey-dark;
     padding: 0.5rem;
     margin-bottom: 1rem;
   }
 
   &__item {
     font-size: 1rem;
-    width: 14rem;
+    width: 12rem;
     display: flex;
     flex-direction: row;
     margin: 1rem 0.5rem 0 0.5rem;
