--- a/css/style.css
+++ b/css/style.css
@@ -222,8 +222,11 @@ button:focus {
   .grid__title {
     font-size: 1.5rem;
     text-align: left;
+    border-bottom: 1px solid #777;
     padding: 0.5rem;
     margin-bottom: 1rem; }
+    .grid__title--tools {
+      width: 65%; }
   .grid__item {
     font-size: 1rem;
     width: 12rem;
