--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -7,9 +7,14 @@
   &__title {
     font-size: 1.5rem;
     text-align: left;
-    // border-bottom: 1px solid $color-grey-dark;
+    border-bottom: 1px solid $color-grey-dark;
+
     padding: 0.5rem;
     margin-bottom: 1rem;
+
+    &--tools {
+      width: 65%;
+    }
   }
 
   &__item {
