--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,8 @@ $color-grey-light-2: #eee;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+$color-grey-cv: #263546;
+$color-orange-cv: #eeb14e;
 
 // Grid
 $grid-width: 114rem;
