--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,9 @@
 .row {
   margin: 0.5rem 0rem;
 }
+
+body {
+  background: $color-grey-cv !important;
+  color: $color-orange-cv !important;
+  font-family: Raleway, Helvetica, sans-serif !important;
+}
