--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
   margin: 1.5rem auto;
 
   &__text {
-    color: #380b67;
+    color: $color-orange-cv;
     font-family: raleway, sans-serif;
     text-decoration: none !important;
     font-size: 1.5rem;
