--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,39 @@
   opacity: 1;
   transition: 0.3s ease-in; }
 
+@keyframes fadeUp {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px); }
+  80% {
+    transform: translateX(10px); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px); }
+  80% {
+    transform: translateX(-10px); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
 .row {
   margin: 0.5rem 0rem; }
+
+body {
+  background: #263546 !important;
+  color: #eeb14e !important;
+  font-family: Raleway, Helvetica, sans-serif !important; }
 
 .about-title {
   font-family: Raleway, Helvetica, sans-serif;
@@ -15,6 +46,17 @@
 
 .subheading {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+
+.heading-primary--main {
+  font-size: 6rem;
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out; }
+
+.heading-primary--sub {
+  animation-name: moveInRight;
+  animation-duration: 1s;
+  animation-timing-function: ease-out; }
 
 .u-center-text {
   text-align: center; }
@@ -65,7 +107,8 @@ button:focus {
   position: relative;
   text-align: center;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  color: #263546; }
   .projects__card--text {
     position: absolute;
     top: 0;
@@ -211,7 +254,7 @@ button:focus {
   justify-content: space-evenly;
   margin: 1.5rem auto; }
   .navbar__text {
-    color: #380b67;
+    color: #eeb14e;
     font-family: raleway, sans-serif;
     text-decoration: none !important;
     font-size: 1.5rem; }
@@ -242,3 +285,10 @@ button:focus {
   .grid img {
     width: 2rem;
     margin-right: 0.5rem; }
+
+.fadeUp {
+  animation-name: fadeUp;
+  animation-delay: 0.5s;
+  animation-duration: 3s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-out; }
