--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -16,6 +16,7 @@ $color-white: #fff;
 $color-black: #000;
 $color-grey-cv: #263546;
 $color-orange-cv: #eeb14e;
+$color-orange-cv-2: #f2d375;
 
 // Grid
 $grid-width: 114rem;
