--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,6 +4,6 @@
 
 body {
   background: $color-grey-cv !important;
-  color: $color-orange-cv !important;
+  color: $color-white !important;
   font-family: Raleway, Helvetica, sans-serif !important;
 }
