--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,9 @@ body {
 .u-margin-top-bottom {
   margin: 20% 0; }
 
+.u-clip-path-projects {
+  clip-path: polygon(0% 10%, 100% 0, 100% 100%, 0 100%); }
+
 button:focus {
   outline: none !important; }
 
@@ -282,6 +285,10 @@ button:focus {
     width: 2rem;
     margin-right: 0.5rem; }
 
+.footer {
+  height: 10rem;
+  z-index: 100; }
+
 .fadeUp {
   animation-name: fadeUp;
   animation-delay: 0.5s;
@@ -290,6 +297,11 @@ button:focus {
   animation-timing-function: ease-out; }
 
 .background-light {
+  background: #fff !important;
+  color: #263546 !important;
+  background-size: cover; }
+
+.background-orange {
   background: #eeb14e !important;
   color: #263546 !important;
   background-size: cover; }
