--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -7,5 +7,9 @@
 }
 
 .u-clip-path-projects {
-  clip-path: polygon(0% 10%, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0% 0%, 100% 10%, 100% 100%, 0 100%);
 }
+
+// .u-clip-path-projects-2 {
+//   clip-path: polygon(0% 0%, 100% 0, 100% 100%, 0 75%);
+// }
