--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,19 @@
   margin: 3rem 0;
   border-bottom: 1px solid $color-grey-dark;
 }
+
+@mixin card {
+  max-width: 40rem;
+  max-height: 24rem;
+  object-fit: cover;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  border: solid 2px $color-orange-cv;
+  position: relative;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  color: $color-grey-cv;
+}
