--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,6 +11,7 @@
 .heading-primary {
   &--main {
     font-size: 6rem;
+    color: $color-orange-cv;
 
     animation-name: moveInLeft;
     animation-duration: 1s;
