--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,13 +1,24 @@
+.header {
+  background: $color-grey-cv;
+  position: fixed;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  z-index: 3000;
+}
+
 .navbar {
   display: flex;
   justify-content: space-evenly;
   margin: 1.5rem auto;
+  width: 70%;
 
   &__text {
     color: $color-orange-cv;
     font-family: raleway, sans-serif;
     text-decoration: none !important;
     font-size: 1.5rem;
+    padding: 1rem;
   }
 }
 
@@ -15,4 +26,8 @@
   .navbar {
     max-width: 50%;
   }
+}
+
+.fixed-nav {
+  position: fixed;
 }
