--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -20,7 +20,7 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
+  border-radius: 10px !important;
   border: solid 2px $color-orange-cv;
   position: relative;
   text-align: center;
