--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,14 +2,14 @@
   text-align: center;
 }
 
-.u-margin-top-bottom {
-  margin: 20% 0;
+.u-padding-top-bottom {
+  padding: 20vh 0;
 }
 
-.u-clip-path-projects {
-  clip-path: polygon(0% 0%, 100% 10%, 100% 100%, 0 100%);
+.u-clip-path-skills {
+  clip-path: polygon(0% 15%, 100% 0%, 100% 100%, 0 100%);
 }
 
-// .u-clip-path-projects-2 {
-//   clip-path: polygon(0% 0%, 100% 0, 100% 100%, 0 75%);
-// }
+.u-clip-path-about {
+  clip-path: polygon(0% 10%, 100% 0, 100% 100%, 0 90%);
+}
