--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -19,7 +19,7 @@
 
 .background-orange {
   background: $color-orange-cv !important;
-  color: $color-grey-cv !important;
+  color: $color-black !important;
   background-size: cover;
 }
 
