--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,16 @@
 .footer {
-  height: 10rem;
+  height: 10vh;
   z-index: 100;
+
+  &__text {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 1rem;
+  }
+
+  &__icons {
+    display: flex;
+    flex-direction: column;
+  }
 }
