--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,9 @@ body {
 .u-clip-path-about {
   clip-path: polygon(0% 10%, 100% 0, 100% 100%, 0 90%); }
 
+.u-filter-invert {
+  filter: invert(100%); }
+
 button:focus {
   outline: none !important; }
 
@@ -185,7 +188,7 @@ button:focus {
     transform: translate(-50%, -20%); }
   .projects:hover .projects__img {
     transform: scale(0.9);
-    filter: blur(3px) brightness(60%); }
+    filter: blur(3px) brightness(40%); }
 
 .slider {
   max-width: 40rem;
@@ -291,9 +294,10 @@ button:focus {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   grid-template-rows: repeat(5);
-  margin-left: 5rem; }
+  margin-left: 5rem;
+  max-width: 30rem; }
   .grid__title {
     font-size: 1.5rem;
     text-align: left;
@@ -314,15 +318,26 @@ button:focus {
 
 .footer {
   height: 10vh;
-  z-index: 100; }
+  z-index: 100;
+  display: grid;
+  grid-template-columns: 8rem 1fr; }
   .footer__text {
     display: flex;
     flex-direction: column;
     height: 100%;
     padding: 1rem; }
+    .footer__text--email {
+      font-size: 1.5rem;
+      margin-bottom: 1rem; }
   .footer__icons {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    align-items: center;
+    margin: 0 !important; }
+    .footer__icons--items {
+      width: 8rem; }
+    .footer__icons img {
+      max-width: 3rem; }
 
 .fadeUp {
   animation-name: fadeUp;
@@ -334,7 +349,7 @@ button:focus {
 .background-light {
   background: #fff !important;
   color: #263546 !important;
-  background-size: cover; }
+  background-size: 100vw !important; }
 
 .background-orange {
   background: #eeb14e !important;
