--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -13,3 +13,7 @@
 .u-clip-path-about {
   clip-path: polygon(0% 10%, 100% 0, 100% 100%, 0 90%);
 }
+
+.u-filter-invert {
+  filter: invert(100%);
+}
