--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,16 +1,33 @@
 .footer {
   height: 10vh;
   z-index: 100;
+  display: grid;
+  grid-template-columns: 8rem 1fr;
 
   &__text {
     display: flex;
     flex-direction: column;
     height: 100%;
     padding: 1rem;
+
+    &--email {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
   }
 
   &__icons {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 0 !important;
+
+    &--items {
+      width: 8rem;
+    }
+
+    img {
+      max-width: 3rem;
+    }
   }
 }
