--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,8 +1,9 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   grid-template-rows: repeat(5);
   margin-left: 5rem;
+  max-width: 30rem;
 
   &__title {
     font-size: 1.5rem;
