--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,7 +14,7 @@
 .background-light {
   background: $color-white !important;
   color: $color-grey-cv !important;
-  background-size: cover;
+  background-size: 100vw !important;
 }
 
 .background-orange {
@@ -30,16 +30,3 @@
 .skew {
   transform: skewy(-5deg);
 }
-
-// .section-features {
-//   padding: 20rem 0;
-//   background-image: linear-gradient(
-//       to right bottom,
-//       rgba(126, 213, 111, 0.8),
-//       rgba(40, 180, 133, 0.8)
-//     ),
-//     url(../img/nat-4.jpg);
-//   background-size: cover;
-//   transform: skewy(-7deg);
-//   margin-top: -10rem;
-// }
