--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,7 +6,7 @@ $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
 
 $color-tertiary-light: #2998ff;
-$color-tertiary-dark: #5643fa;
+$color-tertiary-dark: #638efb;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
@@ -14,6 +14,7 @@ $color-grey-light-2: #eee;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
 $color-grey-cv: #263546;
 $color-orange-cv: #eeb14e;
 $color-orange-cv-2: #f2d375;
