--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,8 @@ button:focus {
     .footer__text--email {
       font-size: 1.5rem;
       margin-bottom: 1rem; }
+    .footer__text--credits {
+      color: #638efb; }
   .footer__icons {
     display: flex;
     flex-direction: column;
