--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -14,6 +14,10 @@
       font-size: 1.5rem;
       margin-bottom: 1rem;
     }
+
+    &--credits {
+      color: $color-tertiary-dark;
+    }
   }
 
   &__icons {
