--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -5,13 +5,18 @@
   margin-left: 5rem;
   max-width: 30rem;
 
+  &__column {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__title {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     text-align: left;
     border-bottom: 1px solid $color-grey-dark;
 
     padding: 0.5rem;
-    margin-bottom: 1rem;
+    margin: 0 0.5rem 1rem 0;
 
     &--tools {
       width: 65%;
@@ -19,7 +24,7 @@
   }
 
   &__item {
-    font-size: 1rem;
+    font-size: 1.2rem;
     width: 12rem;
     display: flex;
     flex-direction: row;
@@ -27,7 +32,7 @@
   }
 
   img {
-    width: 2rem;
+    width: 2.5rem;
     margin-right: 0.5rem;
   }
 }
