--- a/css/style.css
+++ b/css/style.css
@@ -306,9 +306,10 @@ button:focus {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
   grid-template-rows: repeat(5);
   margin-left: 5rem;
+  grid-gap: 0.5rem;
   max-width: 30rem; }
   .grid__column {
     display: flex;
