--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,10 +1,10 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
-  grid-template-rows: repeat(5);
+  grid-template-columns: repeat(3, 1fr);
   margin-left: 5rem;
   grid-gap: 0.5rem;
   max-width: 30rem;
+  // background-color: green;
 
   &__column {
     display: flex;
@@ -35,5 +35,13 @@
   img {
     width: 2.5rem;
     margin-right: 0.5rem;
+  }
+
+  @include respond(tab-port) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include respond(phone) {
+    grid-template-columns: 1fr;
   }
 }
