--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -16,6 +16,10 @@
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+
+    @include respond(phone) {
+      font-size: 4.5rem;
+    }
   }
 
   &--sub {
