--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,6 +23,15 @@
     &:active {
       color: $color-white !important;
     }
+    @include respond(phone) {
+      padding: 0.2rem;
+      justify-content: center;
+    }
+  }
+
+  @include respond(phone) {
+    margin: 0.5rem 0;
+    width: 100%;
   }
 }
 
