opacity on header

--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,8 @@ button:focus {
   display: flex;
   width: 100%;
   justify-content: center;
-  z-index: 3000; }
+  z-index: 3000;
+  opacity: 0.9; }
 
 .navbar {
   display: flex;
