--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -6,6 +6,10 @@
   padding: 20vh 0;
 }
 
+.u-padding-top-bottom-big {
+  padding: 20vh 0 25vh 0;
+}
+
 .u-clip-path-skills {
   clip-path: polygon(0% 15%, 100% 0%, 100% 100%, 0 100%);
 }
