slider active dot colour changed

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ button:focus {
 
 .dots__dot--active {
   /* background-color: #fff; */
-  background-color: #888;
+  background-color: #eeb14e;
   opacity: 1; }
 
 .header {
