--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -84,6 +84,6 @@
 
 .dots__dot--active {
   /* background-color: #fff; */
-  background-color: #888;
+  background-color: $color-orange-cv;
   opacity: 1;
 }
