--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+.fadeUp {
+  animation-name: fadeUp;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-out; }
+
 .hidden {
   opacity: 0;
   transition: 0.3s ease-in; }
@@ -31,6 +37,10 @@
   100% {
     opacity: 1;
     transform: translate(0); } }
+
+.section--hidden {
+  opacity: 0;
+  transform: translateY(8rem); }
 
 *,
 *::before,
@@ -206,6 +216,9 @@ button:focus {
   .projects:hover .projects__img {
     transform: scale(0.9);
     filter: blur(3px) brightness(40%); }
+
+.lazy-img {
+  filter: blur(20px); }
 
 .slider {
   max-width: 40rem;
