--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,3 +1,11 @@
+.fadeUp {
+  animation-name: fadeUp;
+  // animation-delay: 0.1s;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-out;
+}
+
 .hidden {
   opacity: 0;
   transition: 0.3s ease-in;
@@ -48,4 +56,9 @@
     opacity: 1;
     transform: translate(0);
   }
+}
+
+.section--hidden {
+  opacity: 0;
+  transform: translateY(8rem);
 }
