--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -16,7 +16,15 @@
     margin: 0 0.5rem 1rem 0;
 
     &--tools {
-      width: 65%;
+      width: 40%;
+    }
+
+    &--frameworks {
+      width: 85%;
+    }
+
+    &--languages {
+      width: 75%;
     }
   }
 
