--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,11 @@ button:focus {
     padding: 0.5rem;
     margin: 0 0.5rem 1rem 0; }
     .grid__title--tools {
-      width: 65%; }
+      width: 40%; }
+    .grid__title--frameworks {
+      width: 85%; }
+    .grid__title--languages {
+      width: 75%; }
   .grid__item {
     font-size: 1.2rem;
     width: 12rem;
