--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,12 @@ a {
 
 .u-clip-path-skills {
   clip-path: polygon(0% 15%, 100% 0%, 100% 100%, 0 100%); }
+  @media only screen and (max-width: 56.25em) {
+    .u-clip-path-skills {
+      clip-path: polygon(0% 10%, 100% 0%, 100% 100%, 0 100%); } }
+  @media only screen and (max-width: 37.5em) {
+    .u-clip-path-skills {
+      clip-path: polygon(0% 7%, 100% 0%, 100% 100%, 0 100%); } }
 
 .u-clip-path-about {
   clip-path: polygon(0% 10%, 100% 0, 100% 100%, 0 90%); }
