--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -12,6 +12,12 @@
 
 .u-clip-path-skills {
   clip-path: polygon(0% 15%, 100% 0%, 100% 100%, 0 100%);
+  @include respond(tab-port) {
+    clip-path: polygon(0% 10%, 100% 0%, 100% 100%, 0 100%);
+  }
+  @include respond(phone) {
+    clip-path: polygon(0% 7%, 100% 0%, 100% 100%, 0 100%);
+  }
 }
 
 .u-clip-path-about {
