--- a/css/style.css
+++ b/css/style.css
@@ -381,10 +381,18 @@ button:focus {
   .footer__text {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    padding: 1rem; }
+    padding: 1rem;
+    align-items: center; }
+    .footer__text--contact-details {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; }
     .footer__text--email {
       font-size: 1.5rem; }
+    .footer__text--phone {
+      font-size: 1.5rem;
+      font-family: open sans, sans-serif;
+      font-weight: 200; }
     .footer__text--credits {
       color: #638efb; }
   .footer__icons {
