--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,12 +7,23 @@
   &__text {
     display: flex;
     flex-direction: column;
-    height: 100%;
     padding: 1rem;
+    align-items: center;
+
+    &--contact-details {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
 
     &--email {
       font-size: 1.5rem;
-      //   margin-bottom: 1rem;
+    }
+
+    &--phone {
+      font-size: 1.5rem;
+      font-family: open sans, sans-serif;
+      font-weight: 200;
     }
 
     &--credits {
