--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,24 @@ button:focus {
 .fixed-nav {
   position: fixed; }
 
+/* Style the hamburger menu */
+.navbar a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0; }
+
+/* Add a grey background color on mouse-over */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black; }
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #04aa6d;
+  color: white; }
+
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
