--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ a {
   a:hover, a:active {
     color: #eeb14e !important; }
 
+li {
+  list-style: none; }
+
 .about-title {
   font-family: Raleway, Helvetica, sans-serif;
   margin: 10%; }
@@ -304,17 +307,21 @@ button:focus {
 .header {
   background: #263546;
   position: fixed;
-  display: flex;
   width: 100%;
-  justify-content: center;
   z-index: 3000;
   opacity: 0.9; }
 
+.nav-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; }
+
 .navbar {
   display: flex;
-  justify-content: space-evenly;
-  margin: 1rem auto;
-  width: 70%; }
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem; }
   .navbar__text {
     color: #eeb14e !important;
     font-family: raleway, sans-serif;
@@ -322,39 +329,47 @@ button:focus {
     padding: 1rem; }
     .navbar__text:hover, .navbar__text:active {
       color: #fff !important; }
-    @media only screen and (max-width: 37.5em) {
-      .navbar__text {
-        padding: 0.2rem;
-        justify-content: center; } }
-  @media only screen and (max-width: 37.5em) {
-    .navbar {
-      margin: 0.5rem 0;
-      width: 100%; } }
-
-@media screen and (min-width: 480px) {
-  .navbar {
-    max-width: 50%; } }
 
 .fixed-nav {
   position: fixed; }
 
-/* Style the hamburger menu */
-.navbar a.icon {
-  background: black;
+.hamburger {
+  display: none; }
+
+.bar {
   display: block;
-  position: absolute;
-  right: 0;
-  top: 0; }
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010; }
 
-/* Add a grey background color on mouse-over */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black; }
-
-/* Style the active link (or home/logo) */
-.active {
-  background-color: #04aa6d;
-  color: white; }
+@media only screen and (max-width: 37.5em) {
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05); }
+  .nav-menu.active {
+    left: 0; }
+  .nav-item {
+    margin: 2.5rem 0; }
+  .hamburger {
+    display: block;
+    cursor: pointer; }
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0; }
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg); }
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg); } }
 
 .grid {
   display: grid;
