--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,18 +1,24 @@
 .header {
   background: $color-grey-cv;
   position: fixed;
-  display: flex;
   width: 100%;
-  justify-content: center;
   z-index: 3000;
   opacity: 0.9;
+}
+.nav-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .navbar {
   display: flex;
-  justify-content: space-evenly;
-  margin: 1rem auto;
-  width: 70%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+  // margin: 1rem auto;
+  // width: 70%;
 
   &__text {
     color: $color-orange-cv !important;
@@ -24,21 +30,6 @@
     &:active {
       color: $color-white !important;
     }
-    @include respond(phone) {
-      padding: 0.2rem;
-      justify-content: center;
-    }
-  }
-
-  @include respond(phone) {
-    margin: 0.5rem 0;
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .navbar {
-    max-width: 50%;
   }
 }
 
@@ -48,23 +39,56 @@
 
 // hamburger
 
-/* Style the hamburger menu */
-.navbar a.icon {
-  background: black;
+.hamburger {
+  display: none;
+}
+
+.bar {
   display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
 }
 
-/* Add a grey background color on mouse-over */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
+@include respond(phone) {
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+  }
 
-/* Style the active link (or home/logo) */
-.active {
-  background-color: #04aa6d;
-  color: white;
+  .nav-menu.active {
+    left: 0;
+  }
+
+  .nav-item {
+    margin: 2.5rem 0;
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
 }
