--- a/css/style.css
+++ b/css/style.css
@@ -330,9 +330,6 @@ button:focus {
     .navbar__text:hover, .navbar__text:active {
       color: #fff !important; }
 
-.fixed-nav {
-  position: fixed; }
-
 .hamburger {
   display: none; }
 
@@ -349,7 +346,7 @@ button:focus {
   .nav-menu {
     position: fixed;
     left: -100%;
-    top: 5rem;
+    top: 4rem;
     flex-direction: column;
     background-color: #fff;
     width: 100%;
@@ -358,7 +355,7 @@ button:focus {
     transition: 0.3s;
     box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05); }
   .nav-menu.active {
-    left: 0; }
+    left: 0%; }
   .nav-item {
     margin: 2.5rem 0; }
   .hamburger {
