--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -12,12 +12,15 @@
     color: $color-orange-cv;
     background: $color-grey-cv;
     border: solid 2px $color-orange-cv;
+    padding: 1rem;
   }
 
   &--slider {
     color: $color-grey-cv;
     background: white;
     border: solid 2px $color-orange-cv;
+    max-height: 27rem;
+    max-width: 80%;
   }
 
   &--download {
@@ -36,6 +39,10 @@
     font-size: 1.6rem;
     font-weight: bold;
     padding: 1rem;
+  }
+
+  h4 {
+    color: $color-white;
   }
 }
 
