--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,18 +1,19 @@
 .slider {
-  max-width: 60rem;
-  height: 35rem;
+  max-width: 45rem;
+  height: 40rem;
   margin: 0 auto;
   position: relative;
-
-  /* IN THE END */
   overflow: hidden;
+
+  @media only screen and (max-width: 475px) {
+    height: 25rem;
+  }
 }
 
 .slide {
   position: absolute;
   top: 0;
   width: 100%;
-  max-height: 30rem;
 
   display: flex;
   align-items: center;
@@ -84,6 +85,6 @@
 
 .dots__dot--active {
   /* background-color: #fff; */
-  background-color: $color-orange-cv;
+  background-color: #888;
   opacity: 1;
 }
