--- a/css/style.css
+++ b/css/style.css
@@ -64,13 +64,6 @@ a {
 li {
   list-style: none; }
 
-.about-title {
-  font-family: Raleway, Helvetica, sans-serif;
-  margin: 10%; }
-
-.subheading {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-
 .heading-primary--main {
   font-size: 6rem;
   color: #eeb14e;
@@ -162,9 +155,7 @@ button:focus {
   .projects__card--slider {
     color: #263546;
     background: white;
-    border: solid 2px #eeb14e;
-    max-height: 27rem;
-    max-width: 80%; }
+    border: solid 2px #eeb14e; }
   .projects__card--download {
     text-decoration: none !important; }
   .projects__card--download-img {
@@ -239,6 +230,9 @@ button:focus {
   margin: 0 auto;
   position: relative;
   overflow: hidden; }
+  @media only screen and (max-width: 37.5em) {
+    .slider {
+      height: 30rem; } }
   @media only screen and (max-width: 475px) {
     .slider {
       height: 25rem; } }
@@ -261,7 +255,7 @@ button:focus {
 
 .slider__btn {
   position: absolute;
-  top: 35%;
+  top: 30%;
   z-index: 10;
   border: none;
   background: rgba(255, 255, 255, 0.3);
@@ -272,13 +266,16 @@ button:focus {
   width: 2.5rem;
   font-size: 1.5rem;
   cursor: pointer; }
+  @media only screen and (max-width: 37.5em) {
+    .slider__btn {
+      display: none; } }
 
 .slider__btn--left {
-  left: 6%;
+  left: 11%;
   transform: translate(-50%, -50%); }
 
 .slider__btn--right {
-  right: 6%;
+  right: 11%;
   transform: translate(50%, -50%); }
 
 .dots {
@@ -305,8 +302,7 @@ button:focus {
   margin: 0; }
 
 .dots__dot--active {
-  /* background-color: #fff; */
-  background-color: #888;
+  background-color: #eeb14e;
   opacity: 1; }
 
 .header {
@@ -318,9 +314,9 @@ button:focus {
 
 .nav-menu {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  margin: 1.5rem 0;
+  margin: auto;
   padding: 0; }
 
 .navbar {
@@ -332,9 +328,17 @@ button:focus {
     color: #eeb14e !important;
     font-family: raleway, sans-serif;
     font-size: 1.5rem;
-    padding: 1.5rem; }
+    padding: 0 1.5rem; }
     .navbar__text:hover, .navbar__text:active {
       color: #fff !important; }
+    .navbar__text--home {
+      display: visible; }
+      @media only screen and (max-width: 630px) {
+        .navbar__text--home {
+          display: none; } }
+
+.nav-item {
+  margin: 1rem 0; }
 
 .hamburger {
   display: none;
@@ -364,8 +368,6 @@ button:focus {
     transition: 0.3s; }
   .nav-menu.active {
     left: 0%; }
-  .nav-item {
-    margin: 2.5rem 0; }
   .hamburger {
     display: block;
     cursor: pointer; }
