--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -8,10 +8,10 @@
   backface-visibility: hidden;
 }
 
-@mixin divider {
-  margin: 3rem 0;
-  border-bottom: 1px solid $color-grey-dark;
-}
+// @mixin divider {
+//   margin: 3rem 0;
+//   border-bottom: 1px solid $color-grey-dark;
+// }
 
 @mixin card {
   max-width: 40rem;
