--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,15 +1,15 @@
-$color-primary: #55c57a;
+// $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+// $color-primary-dark: #28b485;
 
-$color-secondary-light: #ffb900;
-$color-secondary-dark: #ff7730;
+// $color-secondary-light: #ffb900;
+// $color-secondary-dark: #ff7730;
 
-$color-tertiary-light: #2998ff;
+// $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #638efb;
 
-$color-grey-light-1: #f7f7f7;
-$color-grey-light-2: #eee;
+// $color-grey-light-1: #f7f7f7;
+// $color-grey-light-2: #eee;
 
 $color-grey-dark: #2a2a2a;
 $color-white: #fff;
