--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -48,6 +48,7 @@
   width: 2.5rem;
   font-size: 1.5rem;
   cursor: pointer;
+  padding-bottom: 2.5rem;
 
   @include respond(phone) {
     display: none;
